--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>我的主页</title><link href=/css/chunk-034fdea4.e8fed367.css rel=prefetch><link href=/css/chunk-0e5618f2.30e517c5.css rel=prefetch><link href=/css/chunk-b26734f6.73c236b1.css rel=prefetch><link href=/css/chunk-eeb0c6ee.d1f66c67.css rel=prefetch><link href=/js/chunk-034fdea4.99499b60.js rel=prefetch><link href=/js/chunk-0e5618f2.06f83094.js rel=prefetch><link href=/js/chunk-2d0c04a1.bc9fc5c2.js rel=prefetch><link href=/js/chunk-b26734f6.5c351b42.js rel=prefetch><link href=/js/chunk-eeb0c6ee.017c1e98.js rel=prefetch><link href=/css/app.661b9737.css rel=preload as=style><link href=/css/chunk-vendors.9c7f2f7f.css rel=preload as=style><link href=/js/app.ef5bae48.js rel=preload as=script><link href=/js/chunk-vendors.bc01196e.js rel=preload as=script><link href=/css/chunk-vendors.9c7f2f7f.css rel=stylesheet><link href=/css/app.661b9737.css rel=stylesheet></head><body><noscript><strong>We're sorry but beetrader doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.bc01196e.js></script><script src=/js/app.ef5bae48.js></script></body></html>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>恭喜，站点创建成功！</title>
+    <style>
+        .container {
+            width: 60%;
+            margin: 10% auto 0;
+            background-color: #f0f0f0;
+            padding: 2% 5%;
+            border-radius: 10px
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+            ul li {
+                line-height: 2.3
+            }
+
+        a {
+            color: #20a53a
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>陈成愿</h1>
+    </div>
+</body>
+</html>
