--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>恭喜，站点创建成功！</title>
-    <style>
-        .container {
-            width: 60%;
-            margin: 10% auto 0;
-            background-color: #f0f0f0;
-            padding: 2% 5%;
-            border-radius: 10px
-        }
-
-        ul {
-            padding-left: 20px;
-        }
-
-            ul li {
-                line-height: 2.3
-            }
-
-        a {
-            color: #20a53a
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>陈成愿</h1>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>myblog</title><link href=/css/chunk-0d70195d.2f5547bc.css rel=prefetch><link href=/js/chunk-0d70195d.dbe5f3be.js rel=prefetch><link href=/css/app.7af6aa08.css rel=preload as=style><link href=/css/chunk-vendors.bc377fb0.css rel=preload as=style><link href=/js/app.8837c6ff.js rel=preload as=script><link href=/js/chunk-vendors.3ba33fcb.js rel=preload as=script><link href=/css/chunk-vendors.bc377fb0.css rel=stylesheet><link href=/css/app.7af6aa08.css rel=stylesheet></head><body><noscript><strong>We're sorry but myblog doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.3ba33fcb.js></script><script src=/js/app.8837c6ff.js></script></body></html>
